--- a/q5.md
+++ b/q5.md
@@ -1,1 +1,26 @@
+# Approach 1
+```
+def doubleL(n):
+    res = [] 
+    for i in range(n): res.append(i * 2) 
+    return res
+```
+In this approach the function `double(n)` creates a list of numbers from `0` to `n-1` and each of them multiplied by 2 and the function returns the list. The for loop prints each of the element returned by doubleL(n) seperated by :.
 
+# Approach 2
+```
+for x in [n * 2 for n in range(5)]:
+    print(x, end=' : ')
+```
+In this approach it creates a list of numbers from 0 to 4 and each number is doubled then printed in the list. and a `:` is also being placed after each number.
+
+# Approach 3
+```
+def doubleG(n):
+        for i in range(n):
+            yield i * 2
+
+for i in doubleG(5):
+        print(i, end=' : 
+```
+This method creates a special type of function called a generator function named `doubleG(n)`. This function gives number 0 to less than n and each number is doubled. After that it prints each number ig gets froom `doubleG(n)` and puts a `:` after each number.
